--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h2, h3 {
 }
  /* portfolio styles */
  .content h1 {
-    color: black;
+    color: rgb(255, 247, 247);
 }
 
 #portfolio {
@@ -72,17 +72,17 @@ h2, h3 {
 }
 
 #portfolio li {
-    background: #fff;
+    background: #000000;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
 }
 
 #portfolio li:hover {
-    background: #eee;
+    background: #f1f517;
 }
 
 #portfolio a {
     text-decoration: none;
-    color: #454545;
+    color: #ffffff;
 }
